--- a/docker-compose.traefik.yml
+++ b/docker-compose.traefik.yml
@@ -4,14 +4,9 @@ services:
       disable: true
     labels:
       traefik.enable: "true"
-      traefik.http.routers.ignition-mes.entrypoints: "web"
-      traefik.http.routers.ignition-mes.rule: "Host(`ignition-mes.localtest.me`)"
-      traefik.http.services.ignition-mes.loadbalancer.server.port: "8088"
+      traefik.hostname: <desired-address>
     environment:
-      GATEWAY_SYSTEM_NAME: ignition-mes
-      GATEWAY_PUBLIC_HTTP_PORT: 80
-      GATEWAY_PUBLIC_HTTPS_PORT: 443
-      GATEWAY_PUBLIC_ADDRESS: ignition-mes.localtest.me
+      GATEWAY_SYSTEM_NAME: <desired-address>
     networks:
       - default
       - proxy
